# optimus-agent

./: .env.example  README.md  docker-compose.yml  requirements.md
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  config.py  deps.py  main.py
backend/app/api/v1/: __init__.py  agent.py  health.py  rag.py
backend/app/core/: __init__.py  db.py  models.py
backend/app/services/: __init__.py  agent_service.py  calculator_service.py  email_service.py  embeddings.py  http_service.py  llm_factory.py  prompts.py  rag_service.py  search_service.py  sql_service.py  telemetry.py  tool_registry.py
frontend/: Dockerfile  package.json  pnpm-lock.yaml
frontend/src/app/: layout.tsx  page.tsx  providers.tsx
frontend/src/app/chat/: page.tsx
frontend/src/app/documents/: page.tsx
frontend/src/components/: ExecutionTimeline.tsx
frontend/src/components/chat/: ChatInput.tsx  ChatMessages.tsx  OptimizedMarkdown.tsx
frontend/src/hooks/: useChatScroll.ts
frontend/src/lib/: api.ts  models.ts
frontend/src/types/: chat.ts
