[project]
name = "backend"
version = "0.1.0"
description = "Optimus agent backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.121.2",
    "httpx>=0.28.1",
    "langchain>=1.0.5",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=3.0.3",
    "langchain-openai>=1.0.2",
    "langchain-text-splitters>=1.0.0",
    "langfuse>=3.10.0",
    "pgvector>=0.4.1",
    "pydantic-settings>=2.12.0",
    "pymupdf>=1.26.6",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.44",
]
